# gerrit-faster

./: Cargo.toml  Dockerfile
.forgejo/workflows/: docker.yml
.github/: dependabot.yml
.github/workflows/: prettier.yml  rust.yml  update-rejected-patterns.yml
config/: rejected_patterns.yaml
scripts/: download-rejected-patterns  format
src/: context.rs  lib.rs  main.rs
src/changes/: container.rs  filter.rs  report.rs  serve.rs  status.rs
src/discord/: serve.rs
src/gerrit/: connection.rs  data.rs  serve.rs
src/webserver/: serve.rs  templates.rs
templates/: base.html  change.html  change_not_found.html  overall.html  project.html  repo.html  root.html  style.css  user.html
