[package]
name = "gerrit-faster"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
