[package]
name = "gerrit-faster"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14"
async-trait = "0.1.89"
axum = "0.8.6"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
comfy-table = "7.2.1"
dotenv = "0.15.0"
enum-map = "2.7.3"
fancy-regex = "0.16"
poise = "0.6.1"
rand = { version = "0.9", features = ["default"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9"
tokio = "1.47.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
