[package]
name = "gerrit-faster"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
comfy-table = "7.2.1"
dotenv = "0.15.0"
enum-map = "2.7.3"
fancy-regex = "0.17"
poise = "0.6.1"
rand = { version = "0.9", features = ["default"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = "1.48.0"
tower = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
